<resources>
    <string name="app_name">TP6_EX8</string>

    <string name="titre">Email Signup Form</string>
    <string name="t1">We would love to be in touch with you. Sign up to receive emails from us.</string>
    <string name="t2">Please complete all information below:</string>
    <string name="email">Email <font color="red">*</font></string>
    <string name="password">Password <font color="red">*</font></string>
    <string name="confirmpassaword">Confirm Password <font color="red">*</font></string>
    <string name="salutation">Salutation</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="dateofbirth">Date of birth</string>
    <string name="phone">Phone:</string>
    <string name="btn">submit</string>

</resources>